nicer input, nicer href

--- a/wheat-tastytest-theme/layout.haml
+++ b/wheat-tastytest-theme/layout.haml
@@ -31,7 +31,7 @@
         %ul.nav
           %li %a{href: '/'} Blog
           %li %a{href: '/'} Code
-          %li %a{href: '/search/', class: 'search'} Search
+          %li %a{href: '#/search/', class: 'search'} Search
     
     
       #main.csstransition-please.clearfix{role: 'main'}
