--- a/wheat-tastytest-theme/public/css/style.css
+++ b/wheat-tastytest-theme/public/css/style.css
@@ -178,7 +178,13 @@ body a:hover {
 }
 
 .header .logo a {
+  display: inline-block;
   color: #777;
+}
+
+.header .logo a:hover {
+  color: #B0B0B0;
+  text-shadow:0 0 10px rgba(230, 230, 230, 0.5);
 }
 
 .header ul.nav {
@@ -227,7 +233,26 @@ body a:hover {
 form.search {
   padding: 2em;
 }
-form.search input {-webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;}
+form.search input {
+  -webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;
+  
+  height: 1.5em;
+  width: 40%;
+  margin: auto;
+  
+  -moz-box-shadow: 0px 0px 10px rgb(218, 218, 218);
+  -webkit-box-shadow: 0px 0px 2px rgb(218, 218, 218);
+  box-shadow: 0px 0px 10px rgb(218, 218, 218);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  
+  border: 1px solid rgb(170, 170, 170);
+  color: rgb(68, 68, 68);
+  padding: 0.5em;
+
+}
+
 form.search input:focus {width: 100%;}
 form.search input{width: 30%;}
 
