--- a/wheat-tastytest-theme/layout.haml
+++ b/wheat-tastytest-theme/layout.haml
@@ -8,7 +8,7 @@
     %meta{charset: 'utf-8'}
     %meta{http-equiv: 'X-UA-Compatible', content: 'IE=edge,chrome=1'}
 
-    %title #{(title ? title + ' - ' : '')} MkLog.fr - all about web and front-end - Mickael Daniel
+    %title #{(title ? title + ' - ' : '')} blog.mklog.fr - Mickael Daniel
 
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
 
@@ -17,11 +17,13 @@
 
     %link{rel: 'stylesheet', href: '/css/style.css?v=2'}
 
-    %script{src: '/js/libs/modernizr-1.6.min.js?v=2'}
+    %script{src: '/js/libs/modernizr-1.7.min.js?v=2'}
+    
   %body.white.tiny
+    %script{src: '/js/mylibs/amplify-my-theme.js'}
     #container
       %header{role: 'banner', class: 'header clearfix'}
-        %p.colors
+        %p.themes
           %a{href: '#/themes/white/', class: 'light'} Light
           %a{href: '#/themes/darky/', class: 'darky'} Darky
         
@@ -51,7 +53,7 @@
 
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
     %script !window.jQuery && document.write(unescape('%3Cscript src="/js/libs/jquery-1.4.4.min.js"%3E%3C/script%3E'))
-   
+    
     %script{src: "/js/plugins.js?v=2"}
     %script{src: "/js/script.js?v=2"}
     
