amplify my theme please

--- a/wheat-tastytest-theme/layout.haml
+++ b/wheat-tastytest-theme/layout.haml
@@ -26,6 +26,10 @@
         %p.themes
           %a{href: '#/themes/white/', class: 'light'} Light
           %a{href: '#/themes/darky/', class: 'darky'} Darky
+          
+        %span.wide-content.themes
+          %a.nowide{href: '#/themes/tiny/'} <<
+          %a.wide{href: '#/themes/large/'} >>
         
         %h1.logo
           %a{href: '/'} blog.mklog.fr
@@ -46,10 +50,6 @@
         %span.hovereaster ☺
         %span
           Mickael Daniel
-          
-    %span.wide-content 
-      %a.nowide{href: '#/themes/tiny/'} <<
-      %a.wide{href: '#/themes/large/'} >>
 
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
     %script !window.jQuery && document.write(unescape('%3Cscript src="/js/libs/jquery-1.4.4.min.js"%3E%3C/script%3E'))
