--- a/wheat-tastytest-theme/layout.haml
+++ b/wheat-tastytest-theme/layout.haml
@@ -36,7 +36,7 @@
           
         %ul.nav
           %li %a{href: '/'} Blog
-          %li %a{href: '/'} Code
+          %li %a{href: '//github.com/mklabs'} Code
           %li %a{href: '#/search/', class: 'search'} Search
     
     
