--- a/wheat-tastytest-theme/layout.haml
+++ b/wheat-tastytest-theme/layout.haml
@@ -17,10 +17,11 @@
 
     %link{rel: 'stylesheet', href: '/css/style.css?v=2'}
 
-    %script{src: '/js/libs/modernizr-1.7.min.js?v=2'}
+    %script{src: '/js/libs/modernizr.custom.js?v=2'}
+    
+    %script{src: '/js/mylibs/amplify.my.theme.js?v=2'}
     
   %body.white.tiny
-    %script{src: '/js/mylibs/amplify-my-theme.js'}
     #container
       %header{role: 'banner', class: 'header clearfix'}
         %p.themes
@@ -37,7 +38,6 @@
         %ul.nav
           %li %a{href: '/'} Blog
           %li %a{href: '//github.com/mklabs'} Code
-          %li %a{href: '#/search/', class: 'search'} Search
     
     
       #main.csstransition-please.clearfix{role: 'main'}
@@ -51,12 +51,6 @@
         %span
           Mickael Daniel
 
-    %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
-    %script !window.jQuery && document.write(unescape('%3Cscript src="/js/libs/jquery-1.4.4.min.js"%3E%3C/script%3E'))
-    
-    %script{src: "/js/plugins.js?v=2"}
-    %script{src: "/js/script.js?v=2"}
-    
     <!--[if lt IE 7 ]> 
     %script{src: "/js/libs/dd_belatedpng.js?v=2"}
     %script  DD_belatedPNG.fix('img, .png_bg');
